Fix codestyle and scss z-indexes (header, menu, play video button)

--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -23,7 +23,7 @@
 
   &__header {
     position: sticky;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     background-color: $c-light;
 
@@ -48,6 +48,12 @@
 
     @include onDesktop {
       margin-bottom: 144px;
+    }
+
+    &--benefits { // костиль (виправити)
+      @media (max-width: 767px) {
+        margin-bottom: 140px;
+      }
     }
 
     &--nav {
